# scNuc_analysis

./: README.md  pyproject.toml
docs/: index.html
docs/tables/: full_data.xlsx  markers_clusters.xlsx
docs/webpage/: diagrams.html  images.html  tables.html
scripts/: analysis_features_and_images_selection.py  data_prepare_features_selection.py  prepare_pickshot_model.py
